# multi-tenant-rag-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  alembic.ini  bolchat-brain-architecture.md  gunicorn_conf.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_tables.py  5028a566fb75_add_visitor_id_to_leads.py  681ecf56d28e_add_conversations_and_messages.py  8a8458bbfb06_rename_tenants_add_org_users.py  9ddfe5da4d9e_add_agents_and_widgets.py  a1b2c3d4e5f6_add_response_time_ms.py  b3c4d5e6f7a8_add_leads_table.py
app/: config.py  database.py  dependencies.py  main.py
app/auth/: jwt.py  router.py  schemas.py  service.py
app/core/: __init__.py  email.py  init_db.py  limiter.py  logging_config.py  redis.py
app/models/: __init__.py  agent.py  conversation.py  document.py  knowledge_base.py  lead.py  organization.py  tenant.py  user.py  widget.py
app/routers/: admin.py  agents.py  analytics.py  api_keys.py  chat.py  conversations.py  documents.py  knowledge_base.py  leads.py  public.py  tenants.py  widgets.py
app/schemas/: agent.py  api_key.py  chat.py  conversation.py  document.py  knowledge_base.py  lead.py  organization.py  tenant.py  widget.py
app/services/: chunker.py  document_processor.py  embedding.py  lead_extractor.py  rag.py  vector_store.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PRODUCTION_OPTIMIZATION.md  TECH_DECISIONS.md
frontend/: index.html
scripts/: bootstrap_admin.py  debug_login.py
static/: widget.js
tests/: test_health.py
