[project]
name = "rag-saas-api"
version = "0.1.0"
description = "Multi-tenant RAG SaaS API with FastAPI, Qdrant, and Google Gemini"
requires-python = ">=3.12"

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
